# kyopro_tessoku

./: .gitignore  README.rst  pyproject.toml
mycode/: 01_a01.py  01_a02.py  01_a03.py  01_a04.py  01_a05.py  02_a06.py  02_a07.py  02_a08.py  02_a09.py  02_a10.py  03_a11.py  03_a12.py  03_a13.py  03_a14.py  03_a15.py  03_b12.py  04_a16.py  04_a17.py  04_a18.py  04_a19.py  04_a20.py  04_a21.py
mycode/_review/: a07.py  a09.py  a10.py  a12.py  a13.py  a14.py  a15.py  a18.py  b12.py  template.py
